- Translations for all commands feedbacks; - New commands available: php artisan storage:dump, dump-project abd dump-database; - Update for readme file;

--- a/updates/version.yaml
+++ b/updates/version.yaml
@@ -1,1 +1,4 @@
 1.0.1: First version of Storage Cleaner
+1.1.0:
+  - Translations for all commands feedbacks
+  - 'New commands available: php artisan storage:dump, dump-project abd dump-database'
